--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-Flask==3.0.0
-Flask-PyMongo==2.3.0
-pymongo==4.6.1
-tensorflow==2.20.0
-scikit-learn==1.3.2
-numpy==1.24.3
-Werkzeug==3.0.1
-gunicorn==21.2.0
+Flask
+Flask-PyMongo
+pymongo
+tensorflow
+scikit-learn
+numpy
+Werkzeug
+gunicorn
