--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,20 @@
-# Flask
-# Flask-PyMongo
-# pymongo
-# tensorflow
-# scikit-learn
-# numpy
-# Werkzeug
-# gunicorn
-# python-dotenv
+Flask
+Flask-PyMongo
+pymongo
+tensorflow
+scikit-learn
+numpy
+Werkzeug
+gunicorn
+python-dotenv
 
-Flask==2.3.3
-Flask-PyMongo==2.3.0
-pymongo==4.3.3
-tensorflow-cpu==2.13.0
-scikit-learn==1.3.1
-numpy==1.26.5
-Werkzeug==2.3.7
-gunicorn==20.1.2
-python-dotenv==1.0.1
+# Flask==2.3.3
+# Flask-PyMongo==2.3.0
+# pymongo==4.3.3
+# tensorflow-cpu==2.13.0
+# scikit-learn==1.3.1
+# numpy==1.26.5
+# Werkzeug==2.3.7
+# gunicorn==20.1.2
+# python-dotenv==1.0.1
 
